[tool.poetry]
name = "repl_pygame_ch-10-lab-gtzakas1"
version = "0.1.0"
description = ""
authors = ["gtzakas1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
playsound = "^1.3.0"
replit = "^3.2.4"
mixer = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
